# p0sX-server

./: .drone.yml  .drone.yml.sig  .env  .gitignore  Dockerfile  MAINTAINERS  Makefile  README.md  docker-compose.yaml  docker-entrypoint.sh  entry.sh  flake.nix  pp25.json  pyproject.toml  pytest.ini  release.sh  tox.ini  version.py
.github/: CONTRIBUTING.md
.github/workflows/: p0sx-server-build.yml
config/compose/: dev.yaml  staging.yaml
config/env/: base.env  local.env  prod.env
p0sx/: urls.py  utils.py
p0sx/node/: admin.py  models.py  urls.py
p0sx/p0sx/: celery.py  urls.py  wsgi.py
p0sx/pos/: admin.py  forms.py  ge_importer.py  services.py  tasks.py
p0sx/settings/: __init__.py  base.py  dev.py  prod_example.py
p0sx/templates/: base.djhtml
pos/: admin.py  exceptions.py  forms.py  ge_importer.py
pos/migrations/: 0001_initial.py  0002_auto_20171001_0022.py  0002_category_hidden.py  0002_crewsession.py  0002_discount.py  0003_auto_20160920_2108.py  0003_auto_20161006_1125.py  0004_item_image.py  0004_merge_20160926_1726.py  0005_auto_20160429_1339.py  0005_auto_20160926_1840.py  0006_auto_20160702_1523.py  0006_auto_20160926_1848.py  0006_auto_20180925_2035.py  0006_item_active.py  0007_auto_20160927_1456.py  0007_order_payment_method.py  0007_user_is_crew.py  0008_auto_20160928_1924.py  0008_auto_20181001_1528.py  0009_auto_20160916_1510.py  0009_creditupdate.py  0010_auto_20160916_1531.py  (+2 more)
requirements/: base.in  base.txt  dev.in  dev.txt  development.txt  lint.in  lint.txt  prod.in  prod.txt  production.txt
templates/: base.djhtml
(+109 files in other folders)
